trying to add html through js

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet"
         href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css">
-        
+        <script src="forms.js"></script>
         <title>html form</title>
     </head>
     <body>
+        <div class="hello">hello</div>
         <div class="subscribe-container">
         <form method="POST">
             <input type="email" name="youremail" placeholder="Email Address" required>
