--- a/project3.5/index.html
+++ b/project3.5/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="sample/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <script type="module" src="sample/menu.js"></script>
-        <script type="module" src="sample/data.js"></script>
+        <script type="module" src="project3.5/menu.js"></script>
+        <script type="module" src="project3.5/data.js"></script>
         <title>html form</title>
     </head>
     <body>
